--- a/index.html
+++ b/index.html
@@ -18,6 +18,115 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+
+
+    <style>
+        .image_container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-image: linear-gradient(to left, #b4c5e0, #afcee7, #abd7eb, #a8dfec, #aae7eb);
+            margin-top: 50px;
+
+        }
+
+        .carousel {
+            overflow: hidden;
+            position: relative;
+            border-radius: 0.5rem;
+            scroll-behavior: smooth;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+        }
+
+        .carousel:before {
+            content: "";
+            width: 100%;
+            height: 10rem;
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            z-index: 1;
+            pointer-events: none;
+
+            --bg: rgb(226, 228, 233);
+
+            background: linear-gradient(to right,
+                    var(--bg),
+                    transparent 10%,
+                    transparent 90%,
+                    var(--bg));
+        }
+
+        .slides {
+            width: 65%;
+            height: 80%;
+            display: flex;
+            gap: 20px;
+            padding: 1rem;
+            overflow-x: scroll;
+            scroll-behavior: smooth;
+            --tw-scroll-snap-strictness: mandatory;
+            scroll-snap-type: x var(--tw-scroll-snap-strictness);
+            align-items: center;
+        }
+
+        .navigation {
+            gap: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        .slide img {
+            scroll-snap-stop: always;
+            scroll-snap-align: center;
+            flex-grow: 0;
+            flex-shrink: 0;
+            width: 90%;
+            height: 60%;
+
+            object-fit: cover;
+            background: #1e293b;
+
+            border: none;
+            border-radius: 0.5rem;
+        }
+
+        .slides::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            border-radius: 9999px;
+            background-color: #1e293b;
+        }
+
+        .slides::-webkit-scrollbar {
+            height: 6px;
+        }
+
+        .slides::-webkit-scrollbar-thumb {
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            border-radius: 9999px;
+            background-color: #475569;
+        }
+
+        .slides::-webkit-scrollbar-thumb:hover {
+            background-color: #657791;
+        }
+
+        .slides::-webkit-scrollbar-thumb:active {
+            background-color: #38485e;
+        }
+    </style>
+
 </head>
 
 
@@ -96,7 +205,7 @@
 
     </div>
 
-    <div class="information p-5">
+    <!-- <div class="information p-5">
         <div class="image1 d-flex justify-content-around align-items-center flex-wrap">
             <img class="img-fluid p-5" src="assets/images/essecial/IMG_20230427_121742.jpg" alt="">
             <img class="img-fluid p-4" src="assets/images/essecial/ADMINISTRATIVE-STRUCTURE-AND-HIERACRCHY-IN-INDIA.png"
@@ -105,7 +214,22 @@
                 src="assets/images/essecial/2021_Tamil_Nadu_Legislative_Assembly_election_result.png" alt="">
         </div>
 
+    </div> -->
+
+    <div class="image_container">
+
+        <section class="carousel">
+            <div class="slides">
+                <img class="slide" id="slide-1" src="assets/images/essecial/IMG_20230427_121742.jpg">
+                <img class="slide" id="slide-2"
+                    src="assets/images/essecial/ADMINISTRATIVE-STRUCTURE-AND-HIERACRCHY-IN-INDIA.png">
+
+            </div>
+
+        </section>
+
     </div>
+
 
 
     <!-- section3 -->
@@ -220,89 +344,6 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- <script>
-
-
-        let data = {
-
-            "tamil": {
-
-                "nav": {
-                    "option_one": "முகப்பு",
-                    "option_two": "விவரம்",
-                    "option_three": {
-                        "main_menu": "அறிக்கைகள்",
-                        "sub_menu_one": "நிலுவை",
-                        "sub_menu_two": "நிறைவு"
-                    },
-                    "option_four": "தலைவர்கள்",
-
-                    "option_five": {
-                        "main_menu_2": "மேலும்",
-                        "sub_menu_one_2": "ஆளுநர்கள்",
-                        "sub_menu_two_2": "பிரதிநிதிகள்",
-                    },
-                    "option_six": "உள்நுழைக"
-                }
-            },
-
-            "english": {
-                "nav": {
-                    "option_one": "Home",
-                    "option_two": "Portfolio",
-                    "option_three": {
-                        "main_menu": "Manifesto",
-                        "sub_menu_one": "Pending",
-                        "sub_menu_two": "Completed"
-                    },
-                    "option_four": "Pastleaders",
-
-                    "option_five": {
-                        "main_menu_2": "More",
-                        "sub_menu_one_2": "Governors",
-                        "sub_menu_two_2": "MLA List",
-                    },
-                    "option_six": "Login"
-                }
-            }
-
-        }
-
-        let lang_options = document.querySelectorAll(".multi_lang");
-
-        lang_options.forEach(el => {
-
-            el.addEventListener('click', () => {
-
-                const attr = el.getAttribute('language');
-
-                document.getElementById("option_one").textContent = data[attr].nav.option_one;
-
-                document.getElementById("option_two").textContent = data[attr].nav.option_two;
-
-                document.getElementById("option_three").textContent = data[attr].nav.option_three.main_menu;
-
-                document.getElementById("option_three_sub_one").textContent = data[attr].nav.option_three.sub_menu_one;
-
-                document.getElementById("option_three_sub_two").textContent = data[attr].nav.option_three.sub_menu_two;
-
-                document.getElementById("option_four").textContent = data[attr].nav.option_four;
-
-                document.getElementById("five_option").textContent = data[attr].nav.option_five.main_menu_2;
-
-                document.getElementById("option_five_sub_one").textContent = data[attr].nav.option_five.sub_menu_one_2;
-
-                document.getElementById("option_five_sub_two").textContent = data[attr].nav.option_five.sub_menu_two_2;
-
-                document.getElementById("option_six").textContent = data[attr].nav.option_six;
-            });
-
-
-        });
-
-
-    </script> -->
 
     <script src="main.js"></script>
 
