--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -14,6 +14,37 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .mla-list-intro {
+            display: flex;
+            flex-direction: row;
+            /* flex-wrap: wrap; */
+            font-size: 13px;
+        }
+
+        button {
+            display: inline-block;
+            background-image: linear-gradient(to right top, #abc2e4, #92cef0, #75dbf0, #67e5e2, #79edc8);
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
+            text-decoration: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0062cc;
+        }
+
+        @media screen and (max-width:600px) {
+            
+        }
+    </style>
 
 </head>
 
@@ -23,24 +54,28 @@
 
 
     <!-- mla page -->
+
+
+
+
+    <div class="mla-list-intro">
+        <div>
+            <p><strong>பிரதிநிதிகள்:</strong></p>
+            <p>தமிழ்நாடு சட்டசபையில் 234 தொகுதிகள் உள்ளன. கடைசியாக தமிழ்நாடு சட்டசபைக்கு எம்எல்ஏக்கள் தேர்வு
+                செய்யப்பட்டது மே 2021. திமுக வென்ற தொகுதிகள் 125, அதிமுக வென்ற தொகுதிகள் 65 இடங்கள், மற்றவர்கள் வென்றது
+                44 தொகுதிகள். தமிழ்நாடு சட்டசபைத் தேர்தலில் ஒவ்வொரு கட்சியிலிருந்தும் வென்றவர்களின் விரிவான பட்டியல்.
+            </p>
+        </div>
+        <div>
+            <p>If you don't know your constituency you can take your voter id from the backside Assembly constituency NO
+                & Name you can search that number in the input field which shows your constituency. <img
+                    src="../../assets/images/essecial/IMG_20230427_140143.jpg" style="width: 400px; height: 100px;"
+                    alt=""></p>
+        </div>
+    </div>
+
     <button id="sortName">Sort by Name</button>
     <button id="sortMargin">Sort by Margin</button>
-
-    
-
-    <div class="mla-list-intro d-flex">
-        <div>
-        <p><strong>பிரதிநிதிகள்:</strong></p>
-        <p>தமிழ்நாடு சட்டசபையில் 234 தொகுதிகள் உள்ளன. கடைசியாக தமிழ்நாடு சட்டசபைக்கு எம்எல்ஏக்கள் தேர்வு
-            செய்யப்பட்டது மே 2021. திமுக வென்ற தொகுதிகள் 125, அதிமுக வென்ற தொகுதிகள் 65 இடங்கள், மற்றவர்கள் வென்றது
-            44 தொகுதிகள். தமிழ்நாடு சட்டசபைத் தேர்தலில் ஒவ்வொரு கட்சியிலிருந்தும் வென்றவர்களின் விரிவான பட்டியல்.
-        </p>
-    </div>
-    <div>
-        <p>If you don't know your constituency you can take your voter id from the backside Assembly constituency NO & Name you can search that number in the input field which shows your constituency. <img src="../../assets/images/essecial/IMG_20230427_140143.jpg" style="width: 500px; height: 100px;" alt=""></p>
-    </div>
-    </div>
-
     <div class="governer">
         <!-- <table class="table table-hover">
 
