--- a/pages/passt leaders/past leaders.html
+++ b/pages/passt leaders/past leaders.html
@@ -11,10 +11,31 @@
 
     <title>pastleader</title>
 
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+       table button {
+            display: inline-block;
+            background-image: linear-gradient(to right top, #abc2e4, #92cef0, #75dbf0, #67e5e2, #79edc8);
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 8px 10px;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
+            text-decoration: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+       table button:hover {
+            background-color: #0062cc;
+        }
+    </style>
 
 </head>
 
@@ -26,25 +47,27 @@
 
     <!-- piechart start -->
 
-    <div class="piechart">
+    <!-- <div class="piechart">
         <img src="../../assets/images/piecharts/Parties by total duration (in days) of holding Chief Minister's Office.svg"
             class="img-fluid" alt="error image">
-    </div>
+    </div> -->
 
     <!-- start date list tables -->
 
 
-    <button id="sort-date">Sort by date</button>
-    <button id="sortName">Sort by Name</button>
-    
+  
+
 
     <div class="pastleaders">
         <h1>தமிழ்நாட்டு முதலமைச்சர்களின் பட்டியல்</h1>
+
+        <p>இந்திய அரசியலில் தமிழ்நாடு மாநிலம் எப்போதும் முக்கியப் பங்காற்றுகிறது. இந்த மாநிலத்தின் தலைவர்கள் அதன் குடிமக்கள் அனைவருக்கும் நல்வாழ்வை உறுதிப்படுத்த அயராது உழைத்துள்ளனர்.</p>
         <table class="table bitmap" id="my-table">
             <tr>
+                
                 <th scope="col">No</th>
-                <th scope="col">முதல்வர்</th>
-                <th class="date" scope="col">இருந்து</th>
+                <th scope="col">முதல்வர்<button id="sortName">Sort by Name</button></th>
+                <th class="date" scope="col">இருந்து<button id="sort-date">Sort by date</button></th>
                 <th class="date" scope="col">வரை</th>
 
                 <th scope="col">கட்சி பெயர்</th>
